--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
-    "start": "next start",
-    "postbuild": "next-on-netlify"
+    "start": "next start"
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "^9.7.4",
-    "next": "^9.2.0",
+    "next": "^10.0.0",
     "next-google-fonts": "^1.2.1",
     "next-images": "^1.4.1",
-    "next-on-netlify": "^2.4.0",
     "next-seo": "^4.7.3",
     "postcss-import": "^12.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "tailwindcss": "^1.8.8"
   },
