--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "tailwindcss": "^1.8.8"
+    "sass": "^1.27.0",
+    "tailwindcss": "^1.9.6"
   },
   "devDependencies": {
     "@types/node": "^14.10.1",
