--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "^9.7.4",
     "next": "^10.0.0",
     "next-google-fonts": "^1.2.1",
     "next-images": "^1.4.1",
@@ -17,11 +16,14 @@
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "sass": "^1.27.0",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "9.8.6",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "postcss": "^8.1.8",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "typescript": "^4.0.2"
