--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
+    "@tailwindcss/jit": "^0.1.7",
     "next": "^10.0.0",
     "next-google-fonts": "^1.2.1",
     "next-images": "^1.4.1",
@@ -20,10 +21,10 @@
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "9.8.6",
     "@tailwindcss/custom-forms": "^0.2.1",
     "@types/node": "^14.10.1",
     "@types/react": "^16.9.49",
+    "autoprefixer": "^10.2.5",
     "postcss": "^8.1.8",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
